--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon",
-    "test": "jest --coverage --verbose "
+    "test": "jest --coverage --verbose ",
+    "lint": "eslint '**/*.js'"
   },
   "repository": {
     "type": "git",
